盤面の表示まで

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,6 @@ flutter:
   uses-material-design: true
 
   fonts:
-    - family: roundedMplus
+    - family: Mamelon
       fonts:
-        - asset: fonts/rounded-mplus-1p-thin.ttf
+        - asset: fonts/Mamelon.otf
